Range.surroundContents() should not check node types beforehand.

Our implementation checked childTypeAllowed() beforehand.  However, this is not
defined by the DOM standard, and caused some test failures. This CL removes it.

Also, this CL corrects the order of step 3 and step 4 because the above removal
regressed some passing tests, and the order correction recovers them.

BUG=700266

Review-Url: https://codereview.chromium.org/2745533004
Cr-Commit-Position: refs/heads/master@{#456017}

Former-commit-id: caf3c3acbe69ac013e2aaafad5c8110bb66e435a